--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,16 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>ページのタイトルとか</title>
+<title>ページタイトル</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="">
 <meta name="description" content="">
+<meta property="og:locale" content="ja_JP">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="">
 <meta property="og:title" content="">
 <meta property="og:url" content="">
-<meta property="og:image" content="">
 <meta property="og:description" content="">
 <link rel="shortcut icon" href="images/favicon.ico">
 <link rel="apple-touch-icon" href="images/home-icon.png">
@@ -30,5 +31,6 @@
 <footer>
 フッター
 </footer><!-- #footer -->
+
 </body>
 </html>
