[change]HTMLのテンプレを微調整

--- a/dev/template.html
+++ b/dev/template.html
@@ -36,9 +36,13 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <link rel="icon" type="image/x-icon" href="./images/favicon48.ico" sizes="48x48">
 <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
 <link rel="stylesheet" href="./css/styles.css" type="text/css">
+
+<link rel="canonical" href="">
+<link rel="alternate" media="only screen and (max-width: 640px)" href="">
+
 </head>
 
-<body id="home">
+<body>
 
 <header id="header" class="header">
 
