--- a/dev/template.html
+++ b/dev/template.html
@@ -28,13 +28,13 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <meta property="og:url" content="">
 <meta property="og:title" content="">
 <meta property="og:description" content="">
-<meta property="og:image" content="./images/ogp.png">
+<meta property="og:image" content="/images/ogp.png">
 
 <!-- Favicon -->
-<link rel="shortcut icon" type="image/x-icon" href="./images/favicon16.ico">
-<link rel="icon" type="image/x-icon" href="./images/favicon32.ico" sizes="32x32">
-<link rel="icon" type="image/x-icon" href="./images/favicon48.ico" sizes="48x48">
-<link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+<link rel="shortcut icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+
 <link rel="stylesheet" href="./css/styles.css" type="text/css">
 
 <link rel="canonical" href="">
