--- a/dev/template.html
+++ b/dev/template.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- 半レスポンシブの場合 -->
 <script type="text/javascript">
@@ -35,7 +35,7 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
-<link rel="stylesheet" href="./css/styles.css" type="text/css">
+<link rel="stylesheet" href="./css/styles.css">
 
 <link rel="canonical" href="">
 <link rel="alternate" media="only screen and (max-width: 640px)" href="">
