--- a/dev/template.html
+++ b/dev/template.html
@@ -30,6 +30,9 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <meta property="og:description" content="">
 <meta property="og:image" content="/images/ogp.png">
 
+<!-- 連続した数字があると誤認識してしまうので、電話番号の自動リンク機能は停止 -->
+<meta name="format-detection" content="telephone=no">
+
 <!-- Favicon -->
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
